Made new-quote button functional

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div id="quote" class="col-xs-10 col-xs-offset-1">
-        <button type="button">Click Me!</button>
+        <div id="quote" class="text-center col-xs-10 col-xs-offset-1">
         </div>
+        <button id="new-quote" type="button">Click Me!</button>
       </div>
     </div>
   </body>
