--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div id="quote" class="text-center col-xs-10 col-xs-offset-1">
         </div>
-        <button id="new-quote" type="button">Click Me!</button>
+        <button id="new-quote" type="button">New Quote</button>
       </div>
     </div>
   </body>
