--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <div class="row">
         <div id="quote" class="text-center col-xs-10 col-xs-offset-1">
         </div>
+      </div>
+      <div class="row">
         <button id="new-quote" type="button">New Quote</button>
       </div>
     </div>
